# python-payid-validator

./: .gitignore  .travis_yml  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  test_requirements.txt
payid_validator/: __init__.py
tests/: test_main.py
