[tool.poetry]
name = "python-payid-validator"
version = "0.1.0"
description = "A validation function for the PayId URI."
authors = ["Rock Howard <rockmhoward@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
precis-i18n = "*"
idna = "*"

[tool.poetry.dev-dependencies]
pytest = "5.4.3"
coverage = "^5.1"
docutils = "^0.16"
flake8 = "3.8.3"
pytest-cov = "2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
